An array of blockchain developments